--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_BASE_URL=https://localserver.cendrol.com/cendrolpeopledev/api
+
+# REACT_APP_AUTH_TOKEN = Y3VzdG9tdG9rZW50b3Byb3RlY3RhcGlyb3V0ZXM
