--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_BASE_URL = 'https://localserver.cendrol.com/cendrolpeopledev/api'
+# REACT_APP_BASE_URL = 'https://localserver.cendrol.com/cendrolpeopledev/api'
+REACT_APP_BASE_URL = 'http://192.168.1.99:6060/api'
 REACT_APP_CUSTOM_TOKEN = 'Y3VzdG9tdG9rZW50b3Byb3RlY3RhcGlyb3V0ZXM='
 REACT_APP_USER_TYPE = 'admin'
