--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
-    "ol": "^7.3.0",
+    "ol": "^6.15.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-filter-search": "^1.1.11",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
